tests/positive/pr118d_bounded_string_array_component.safe
-- Test: pr118d_bounded_string_array_component
-- Description: Fixed arrays may use bounded String components in the buildable PR11.8d subset.
-- Expected: ACCEPT

package pr118d_bounded_string_array_component

   subtype slot is integer (1 to 4);
   type name_table is array (slot) of string (5);

